--- a/src/index.pcss
+++ b/src/index.pcss
@@ -111,6 +111,14 @@
     }
   }
 
+  &__counter {
+    display: flex;
+    align-items: center;
+    color: gray;
+    font-size: 14px;
+    margin-right: 6px;
+  }
+
   &__caption {
     &[contentEditable="true"][data-placeholder]::before {
       position: absolute !important;
@@ -152,11 +160,33 @@
 
   &__tune-wrapper {
     display: flex;
+    gap: 6px;
+    margin: 6px 0;
+
+    &:first-child {
+      margin-top: 0;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
   &__tune {
-    width: 50%;
-    margin-right: 0 !important;
+    flex-grow: 1;
+    padding: 6px;
+    color: var(--color-text-primary);
+
+    &.active {
+      background: var(--color-background-icon-active);
+      color: var(--color-text-icon-active);
+      border-color: var(--color-text-icon-active);
+    }
+
+    & svg {
+      width: 24px;
+      height: 24px;
+    }
   }
 }
 
